# Lucuna

./: .gitignore  CLAUDE.md  Lacuna_Frontend_PRD.md  Lacuna_PRD.md  PROGRESS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_per_project_review_uniqueness.py  0003_jobs_table.py
api/: app.py  deps.py  jobs.py  runtime.py  schemas.py
api/routers/: export.py  jobs.py  projects.py  reads.py  search.py  seed.py  sweep.py
app/: cli.py  streamlit_app.py
config/: advanced.yaml  default.yaml
docs/: LIMITATIONS.md  METHODOLOGY.md
frontend/: package-lock.json  package.json  vitest.setup.ts
lacuna/: __init__.py  config.py
lacuna/adapters/: _http.py  corpus.py  google_books.py  hardcover.py  nyt.py  open_library.py
lacuna/aggregation/: cross_platform.py  persist.py
lacuna/db/: __init__.py  models.py  repository.py  session.py
lacuna/export/: context_pack.py  narrative.py
lacuna/nlp/: aspects.py  clustering.py  embeddings.py
lacuna/pipeline/: category_sweep.py  distill.py  freshness.py  live_single_title.py  single_title.py  validation.py
lacuna/schemas/: sources.py
lacuna/scoring/: components.py  gap_score.py  normalize.py  persist.py  (+1 more)
scripts/: pin_revisions.py
tests/: test_acceptance_static.py  test_cli_commands.py  test_cli_validate.py  test_config.py  test_gitignore.py  test_hardcover_live.py  test_live_search_gate.py  test_migration_sql.py  test_models.py  test_no_reddit.py  test_pin_revisions.py  test_schemas.py  test_session.py  test_validation.py  test_validation_recorder.py
(+124 files in other folders)
