[project]
name = "lacuna"
version = "0.1.0"
description = "Local $0-runtime reader-dissatisfaction gap engine over Supabase"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pgvector>=0.3",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "gql[httpx]>=3.5",
  "tenacity>=8.2",
  "sentence-transformers>=3.0",
  "transformers>=4.40",
  "torch>=2.2",
  "hdbscan>=0.8.36",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "numpy>=1.26",
  "polars>=1.0",
  "duckdb>=1.0",
  "datasets>=2.19",
  "huggingface-hub>=0.23",
  "streamlit>=1.36",
  "typer>=0.12",
  "python-dotenv>=1.0",
]

[project.scripts]
lacuna = "app.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "anyio>=4.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
